# meet-transcribe

./: .env.example  .gitignore  .gitmodules  README.md  TODOS.md  pyproject.toml
.claude/: settings.local.json
configs/: meet-transcribe.example.yaml
deploy/scripts/: init_schema.sql  install.sh
deploy/systemd/: meet-transcribe.service
docs/: admin-api.md  api.md  deploy-ubuntu.md  design-v2.md  dev-windows.md  protocol.md
scripts/: bootstrap-tenant.sh  pre_download_models.py  run_dev.py  test_campp_match.py  verify_speaker_enrollment.py  verify_voiceprint_e2e.py
src/meet_transcribe/: __init__.py
src/meet_transcribe/api/: app.py  errors.py
src/meet_transcribe/api/routes/: admin.py  auth.py  speakers.py  transcribe.py  ws.py
src/meet_transcribe/auth/: api_key.py  crypto.py  ticket.py
src/meet_transcribe/config/: loader.py
src/meet_transcribe/core/: funasr_adapter.py  orchestrator.py  whisperlivekit_adapter.py
src/meet_transcribe/db/: base.py  models.py  session.py
src/meet_transcribe/diarization/: __init__.py
src/meet_transcribe/hotwords/: __init__.py
src/meet_transcribe/observability/: doctor.py  logging.py  metrics.py
src/meet_transcribe/speakers/: __init__.py  embedding.py  matcher.py  resolver.py
tests/: conftest.py
tests/integration/: test_speakers_route.py  test_whisperlivekit_contract.py
tests/unit/: test_api_health.py  test_config_loader.py  test_crypto.py  test_embedding_quality.py  test_errors.py  test_logging.py  test_matcher.py  test_speaker_resolver.py  test_ticket.py
web-demo/: index.html  render.js
